<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <GVL Name="GVL_Variables" Id="{b51a938b-2a65-48fa-a2b5-847fac352052}">
    <Declaration><![CDATA[VAR_GLOBAL
	{attribute 'pytmc' := '
	pv: AT1K0:GAS:GAS_TYPE ;
	type: mbbi ;
	field: ZRST none ;
	field: ONST N2;
	field: TWST Ar ;
	io: i
	'}
	SelectedGas: E_GasType;
	{attribute 'pytmc' :=' pv: AT1K0:GAS:CNTRL:CALC_SP;
	field: HOPR 1000;
	field: LOPR 0;
	field: PREC 2;
	field: EGU "TORR";
	'}
	rRequiredPressureSP: REAL;
	eSelectedAprt:E_MAA_States;
	eSetAprt:E_MAA_States;
	{attribute 'pytmc' := '
    pv: AT1K0:GAS:TRANS;
	io:i;
    '}
	rCalculatedTransmissionValue: LREAL;
	{attribute 'pytmc' := '
    pv: AT1K0:GAS:TRANS_REQ;
	io:i;
    '}
	rRequestedTransmissionValue: REAL;
	{attribute 'pytmc' := '
    pv: AT1K0:GAS:TRANS_SP;
	io:i;
    '}
	rTransmissionSP: LREAL;
	
	TransmissionValue: REAL;
	OldTransmissionValue: REAL;
	
END_VAR

//xSystemOverrideMode : BOOL; (* Global system override for the prototype section*)


]]></Declaration>
  </GVL>
</TcPlcObject>