<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <POU Name="PRG_PMPS" Id="{3bbd9cd5-72c9-4b35-aa2f-63d3e3610a6e}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_PMPS
VAR
 fbArbiterIO : FB_SubSysToArbiter_IO;
 ar1 : bool;
 ar2 : bool;
 nReqID:UDINT;
 nReqRM:UDINT;
 bRemove:bool;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[(*Fast Fault instantiation*)
g_FastFaultOutput1.bAutoReset :=TRUE;
g_FastFaultOutput2.bAutoReset :=TRUE;
g_FastFaultOutput1.Execute();
g_FastFaultOutput2.Execute();


(* Arbiter Instantiation*)
(*Arbiter one responsible for the aperture valves*)
fbArbiterIO(Arbiter := GVL_ILK.fbArbiter1, fbFFHWO := GVL_ILK.g_FastFaultOutput1);
GVL_ILK.fbArbiter2.ElevateRequest(GVL_ILK.fbArbiter1);

ar1:=GVL_ILK.fbArbiter1.CheckRequestInPool(nReqID);
ar2:=GVL_ILK.fbArbiter2.CheckRequestInPool(nReqID);
if (bRemove) THEN
 	GVL_ILK.fbArbiter1.RemoveRequest(nReqRM);
	GVL_ILK.fbArbiter2.RemoveRequest(nReqRM);  
END_IF]]></ST>
    </Implementation>
    <LineIds Name="PRG_PMPS">
      <LineId Id="26" Count="0" />
      <LineId Id="18" Count="1" />
      <LineId Id="5" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="24" Count="1" />
      <LineId Id="11" Count="0" />
      <LineId Id="30" Count="0" />
      <LineId Id="28" Count="0" />
      <LineId Id="58" Count="0" />
      <LineId Id="54" Count="0" />
      <LineId Id="38" Count="0" />
      <LineId Id="40" Count="0" />
      <LineId Id="39" Count="0" />
      <LineId Id="49" Count="0" />
      <LineId Id="51" Count="0" />
      <LineId Id="50" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>